# macos-terminal-cmds

./: README.md  applescript  pyproject.toml
macos_terminal/: lib.py
macos_terminal/applescript/: terminal-bounds-get  terminal-bounds-set  terminal-custom-title-get  terminal-custom-title-set  terminal-profile-get  terminal-profile-set
macos_terminal/cli/: resize.py  theme.py  title.py
macos_terminal/util/: entrypoint.py  wrapper.py
tests/: test_lib.py
